<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="6dp"
        android:paddingEnd="0dp">

        <TextView
            android:id="@+id/generic_collection_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="sans-serif-black"
            android:layout_marginLeft="5dp"
            android:text="Sort Order:"
            android:textSize="18sp">

        </TextView>

        <TextView
            android:id="@+id/sort_by_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/sort_option_spinner"
            android:fontFamily="sans-serif-black"
            android:text="Sort by:"
            android:textSize="18sp">

        </TextView>

        <Spinner
            android:id="@+id/sort_option_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            />

        <ImageButton
            android:id="@+id/sort_order_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/sort_by_title"
            android:layout_toRightOf="@id/generic_collection_title"
            android:backgroundTint="@android:color/transparent"
            app:srcCompat="@android:drawable/arrow_up_float"
            app:tint="@color/purple_200" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:paddingStart="10sp"
        android:paddingEnd="10sp">

        <ListView
            android:id="@+id/generic_collection_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="0dp"
            android:divider="@android:color/transparent"
            android:dividerHeight="10sp"
            android:scrollbars="none">

        </ListView>

    </RelativeLayout>

</LinearLayout>