...
            android:layout_marginStart="5dp"
            android:text="best before"
            android:textColor="#000000"
            app:layout_constraintEnd_toStartOf="@+id/ingredient_location_in_mealplan"
            app:layout_constraintHorizontal_weight="0.5"
            app:layout_constraintStart_toEndOf="@+id/ingredient_badge_in_selection"
            app:layout_constraintTop_toBottomOf="@+id/ingredient_description_in_selection" />

        <TextView
            android:id="@+id/ingredient_description_in_selection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="description"
...
            android:layout_marginStart="10dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/ingredient_bbd_in_mealplan"
            app:layout_constraintHorizontal_weight="0.25"
            app:layout_constraintStart_toEndOf="@+id/ingredient_bbd_in_mealplan" />

        <TextView
            android:id="@+id/ingredient_category_in_selection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="category"
            android:textColor="#000000"
            app:layout_constraintBaseline_toBaselineOf="@+id/ingredient_location_in_mealplan"
...
